[gd_scene load_steps=20 format=3 uid="uid://bgqffqcrj76oa"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_l1qma"]
[ext_resource type="Resource" uid="uid://cnlahc7n2hwm" path="res://entities/player/PlayerHealth.tres" id="2_sj02o"]
[ext_resource type="PackedScene" uid="uid://wlc4s2lsffk4" path="res://entities/player/weapon.tscn" id="3_4olqu"]
[ext_resource type="Texture2D" uid="uid://dft8dx0il33hh" path="res://art/player/Hmercenary_hmerc.png" id="3_kb2yu"]
[ext_resource type="PackedScene" uid="uid://dk5gpkh6tndc6" path="res://art/player/Hmercenary.glb" id="3_o0dom"]
[ext_resource type="Texture2D" uid="uid://da16cgkalgvao" path="res://art/ui/ui_blood_3.png" id="5_21y5o"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kl5tv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8hymg"]
albedo_texture = ExtResource("3_kb2yu")
metallic_specular = 0.0
texture_filter = 0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bwe3y"]
animation = &"kick"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b6sw8"]
animation = &"strafe"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b6252"]
animation = &"strafe"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fsb2d"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gq6si"]
animation = &"jog"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d25f4"]
animation = &"jog"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_p8721"]
blend_point_0/node = SubResource("AnimationNodeAnimation_b6sw8")
blend_point_0/pos = Vector2(1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_b6252")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_fsb2d")
blend_point_2/pos = Vector2(0, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_gq6si")
blend_point_3/pos = Vector2(0, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_d25f4")
blend_point_4/pos = Vector2(0, 1)

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_13fad"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_jlid4"]
graph_offset = Vector2(-704, 86)
nodes/Animation/node = SubResource("AnimationNodeAnimation_bwe3y")
nodes/Animation/position = Vector2(-200, 300)
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_p8721")
nodes/BlendSpace2D/position = Vector2(-180, 100)
nodes/OneShot/node = SubResource("AnimationNodeOneShot_13fad")
nodes/OneShot/position = Vector2(80, 200)
node_connections = [&"output", 0, &"OneShot", &"OneShot", 0, &"BlendSpace2D", &"OneShot", 1, &"Animation"]

[sub_resource type="Animation" id="Animation_mbtta"]
resource_name = "hurt_screen"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l6uaw"]
_data = {
"hurt_screen": SubResource("Animation_mbtta")
}

[node name="player" type="CharacterBody3D"]
collision_mask = 2
script = ExtResource("1_l1qma")
health = ExtResource("2_sj02o")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_kl5tv")

[node name="Hmercenary" parent="." instance=ExtResource("3_o0dom")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.02871, 0.00629519)

[node name="Skeleton3D" parent="Hmercenary/metarig" index="0"]
bones/4/rotation = Quaternion(-0.00873904, 0.137109, -0.990433, -0.0129228)
bones/4/scale = Vector3(0, 0, 0)
bones/6/rotation = Quaternion(-0.701319, -0.128465, -0.57177, -0.405866)
bones/6/scale = Vector3(0, 0, 0)
bones/7/position = Vector3(-2.19655, -1.61037, 22.8066)
bones/7/rotation = Quaternion(0.0140584, 0.021578, -0.999218, -0.0300139)
bones/7/scale = Vector3(0, 0, 0)
bones/8/position = Vector3(-1.28344, 0.121176, 1.94432)
bones/8/rotation = Quaternion(0.725243, 0.0263737, 0.681104, -0.0970811)
bones/8/scale = Vector3(0, 0, 0)
bones/9/position = Vector3(-1.90349, 1.56779, -2.88182)
bones/9/rotation = Quaternion(0.735915, 0.0423622, 0.636934, -0.225718)
bones/9/scale = Vector3(0, 0, 0)
bones/10/position = Vector3(-1.21809, 1.49592, 1.7372)
bones/10/rotation = Quaternion(0.0503653, 0.211554, -0.975266, 0.0395438)
bones/10/scale = Vector3(0, 0, 0)
bones/11/position = Vector3(-0.734886, -0.943016, 7.56592)
bones/11/rotation = Quaternion(-0.0246636, -0.0322705, 0.998639, 0.0327222)
bones/11/scale = Vector3(0, 0, 0)
bones/12/position = Vector3(-0.730561, -7.22183, 21.6544)
bones/12/rotation = Quaternion(0.0103495, 0.13913, -0.9902, -0.00634012)
bones/12/scale = Vector3(0, 0, 0)
bones/14/rotation = Quaternion(-0.701319, 0.128465, 0.57177, -0.405866)
bones/14/scale = Vector3(0, 0, 0)
bones/15/position = Vector3(2.19655, -1.61037, 22.8066)
bones/15/rotation = Quaternion(0.0140584, -0.021578, 0.999218, -0.0300139)
bones/15/scale = Vector3(0, 0, 0)
bones/16/position = Vector3(1.28344, 0.121176, 1.94432)
bones/16/rotation = Quaternion(0.725243, -0.0263737, -0.681104, -0.0970811)
bones/16/scale = Vector3(0, 0, 0)
bones/17/position = Vector3(1.90349, 1.56779, -2.88182)
bones/17/rotation = Quaternion(0.735915, -0.0423622, -0.636934, -0.225718)
bones/17/scale = Vector3(0, 0, 0)
bones/18/position = Vector3(1.21809, 1.49592, 1.7372)
bones/18/rotation = Quaternion(0.0503653, -0.211554, 0.975266, 0.0395438)
bones/18/scale = Vector3(0, 0, 0)
bones/19/position = Vector3(0.734886, -0.943016, 7.56592)
bones/19/rotation = Quaternion(-0.0246636, 0.0322705, -0.998639, 0.0327222)
bones/19/scale = Vector3(0, 0, 0)
bones/20/position = Vector3(0.730561, -7.22183, 21.6544)
bones/20/rotation = Quaternion(0.0103495, -0.13913, 0.9902, -0.00634012)
bones/20/scale = Vector3(0, 0, 0)
bones/21/rotation = Quaternion(0.993191, 0.013469, -0.0033103, 0.115666)
bones/23/rotation = Quaternion(-0.604893, -0.0158916, 0.00789961, 0.796109)
bones/24/rotation = Quaternion(0.993191, -0.013469, 0.0033103, 0.115666)
bones/26/rotation = Quaternion(-0.604893, 0.0158916, -0.00789961, 0.796109)

[node name="OBJ0000185_001" parent="Hmercenary/metarig/Skeleton3D" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_8hymg")

[node name="AnimationTree" type="AnimationTree" parent="Hmercenary"]
tree_root = SubResource("AnimationNodeBlendTree_jlid4")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/BlendSpace2D/blend_position = Vector2(0, 0)
parameters/OneShot/active = false
parameters/OneShot/internal_active = false
parameters/OneShot/request = 0

[node name="cam_pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.92733, -0.205015)
rotation_edit_mode = 2

[node name="Camera3D" type="Camera3D" parent="cam_pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0982218, 0.0735781)

[node name="kick_raycast" type="RayCast3D" parent="cam_pivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -3, 0)
collision_mask = 6

[node name="weapon" parent="cam_pivot/Camera3D" instance=ExtResource("3_4olqu")]
transform = Transform3D(-0.5, 0, -7.54979e-08, 0, 0.5, 0, 7.54979e-08, 0, -0.5, 0, -0.731843, 0.176275)
force = 5.0
shots = 0
reload_num = 100
reload_speed = 2.0

[node name="RayCast3D" parent="cam_pivot/Camera3D/weapon" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.45658, 0)

[node name="viewmodel-pistol" parent="cam_pivot/Camera3D/weapon" index="1"]
transform = Transform3D(1, 2.11685e-08, 1.4912e-09, -2.11685e-08, 0.990124, 0.140193, 1.4912e-09, -0.140193, 0.990124, -0.0575105, 0.107976, 0.15389)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Slomo" type="Label" parent="Control"]
layout_mode = 0
offset_left = 930.0
offset_top = 547.0
offset_right = 982.0
offset_bottom = 573.0
text = "pingus"

[node name="Reload" type="Label" parent="Control"]
layout_mode = 0
offset_left = 895.0
offset_top = 523.0
offset_right = 990.0
offset_bottom = 549.0
text = "reload"

[node name="Ammo" type="Label" parent="Control"]
layout_mode = 0
offset_left = 929.0
offset_top = 474.0
offset_right = 1024.0
offset_bottom = 500.0
text = "ammo"

[node name="Ammo2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 929.0
offset_top = 497.0
offset_right = 1024.0
offset_bottom = 523.0
text = "ammo2"

[node name="Refire" type="Label" parent="Control"]
layout_mode = 0
offset_left = 898.0
offset_top = 575.0
offset_right = 993.0
offset_bottom = 601.0
text = "refire"

[node name="Spread" type="Label" parent="Control"]
layout_mode = 0
offset_left = 898.0
offset_top = 600.0
offset_right = 993.0
offset_bottom = 626.0
text = "spread"

[node name="Health" type="Label" parent="Control"]
layout_mode = 0
offset_left = 26.0
offset_top = 595.0
offset_right = 121.0
offset_bottom = 621.0
text = "Health"

[node name="DebugNormals" type="Label" parent="Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 567.0
offset_right = 141.0
offset_bottom = 593.0
text = "DebugNormals"

[node name="crosshair" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.5
offset_top = -5.5
offset_right = 5.5
offset_bottom = 5.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(5, 5)

[node name="u_cross" type="ColorRect" parent="Control/crosshair"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.545
anchor_top = 0.543
anchor_right = 0.545
anchor_bottom = 0.543
offset_left = -0.995
offset_top = -5.973
offset_right = 0.00499964
offset_bottom = -0.973001

[node name="d_cross" type="ColorRect" parent="Control/crosshair"]
layout_mode = 1
anchors_preset = -1
offset_left = 4.5
offset_top = 5.5
offset_right = 5.5
offset_bottom = 10.5

[node name="l_cross" type="ColorRect" parent="Control/crosshair"]
layout_mode = 1
anchors_preset = -1
offset_top = 5.0
offset_right = 5.0
offset_bottom = 6.0

[node name="r_cross" type="ColorRect" parent="Control/crosshair"]
layout_mode = 1
anchors_preset = -1
offset_left = 5.5
offset_top = 4.5
offset_right = 10.5
offset_bottom = 5.5

[node name="TextureRect" type="TextureRect" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1151.0
offset_bottom = 647.0
texture = ExtResource("5_21y5o")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_l6uaw")
}

[editable path="Hmercenary"]
[editable path="cam_pivot/Camera3D/weapon"]
[editable path="cam_pivot/Camera3D/weapon/viewmodel-pistol"]
[editable path="cam_pivot/Camera3D/weapon/viewarms"]
